# myia

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pydocstyle  .travis.yml  ALPHA.md  CONTRIBUTING.rst  DEVELOPERS.md  Jenkinsfile  LICENSE  README.md  README.rst  ROADMAP.md  ROADMAP.rst  ci-install.sh  codecov.yml  conftest.py  conv_op.py  cov.sh  cpu-extras.conda  devdoc.md  environment-cpu.yml  environment-gpu.yml  environment.yml  gprint.py  gpu-extras.conda  graph.css  myia_conv.py  myia_mlp.py  mypy.ini  pyproject.toml  pytest.ini  relay-extras.conda  requirements-cpu.conda  requirements-gpu.conda  requirements.conda  requirements.txt  run_tests.sh  setup.py
.github/workflows/: python-package.yml
.testing/: install.sh  jenkins-cache-after.sh  jenkins-cache-before.sh
baseline/cifar10/: README.md  cifar10.py  run_main.py
debug/: README.md  __main__.py  bupdb.py  butest.py  cfg.py  cmd.py  do_inject.py  gprint.py  graph.css  inject.py  j_utils.py  logword.py  myia.css  run.py  steps.py  test_template.html  tools.py  trace.py  typ.py
demo/: demo.py  test.txt  test_gradient.py  test_numpy.py
docs/: Makefile  conf.py  gradient.ipynb  index.rst
docs/_static/: .gitkeep
docs/source/: modules.rst  myia.rst
examples/: cnn.py  lstm.py  mlp.py  policy_gradient.py  policy_gradient__myia.py  rnn.py  vae.py
myia/: __init__.py  __main__.py  anf_ir.py  anf_ir_utils.py  api.py  aspecialize.py  ast.css  ast.py  basics.py  buche.py  cconv.py  classes.py  clone.py  compile.py  composite.py  dshape.py  dtype.py  event.py  fence.py  front.py  grad.py  grad_implementations.py  graph_utils.py  hypermap.py  impl_py.py  infer.py  info.py  interpret.py  ir.py  ir_utils.py  jax.py  lib.py  macros.py  manager.py  modules.py  monomorphize.py  myia.css  operations.py  opt.py  opt2.py  (+19 more)
myia/abstract/: __init__.py  aliasing.py  amerge.py  annotation_validation.py  base.py  core.py  data.py  graph_infer.py  inf.py  infer.py  loop.py  macro.py  map.py  prim.py  ref.py  to_abstract.py  utils.py
myia/analyze/: __init__.py  graph.py  prims.py  type.py  value.py
myia/assets/: myia.css
myia/compile/: __init__.py  backends.py  cconv.py  debug_lin.py  dlpack.py  nnvm.py  relay.py  relay_helpers.py  step.py  transform.py  utils.py  vm.py
myia/debug/: buche.py  do_inject.py  draw.py  finite_diff.py  gprint.py  graph.css  graph_vis.py  inject.py  label.py  location.py  myia.css  traceback.py  utils.py
myia/frontends/: __init__.py  abstract_types.py  numpy.py  pytorch.py  pytorch_abstract_types.py  pytorch_functions.py  pytorch_old.py
myia/impl/: flow_all.py  impl_abstract.py  impl_bprop.py  impl_interp.py  main.py  proj.py  proj_shape.py  proj_type.py
myia/infer/: __init__.py  algo.py  core.py  graph_infer.py  inferrers.py  infnode.py  jinf.py  utils.py
myia/inference/: avm.py  dfa.py  infer.py  types.py
myia/interpret/: __init__.py  gimpls.py  impls.py  runtime.py  vm.py  vmutil.py
myia/ir/: __init__.py  abstract.py  anf.py  clone.py  convert.py  graph.py  graph_utils.py  manager.py  metagraph.py  node.py  opt.py  pattern.py  print.py  utils.py
myia/legacy_interpret/: __init__.py  vm.py
myia/operations/: __init__.py  gen.py  macro_abstract_array.py  macro_apply.py  macro_array_len.py  macro_call_object.py  macro_conv2d_grad_input.py  macro_dict_values.py  macro_dtype.py  macro_einsum.py  macro_embed.py  macro_getattr.py  macro_grad.py  macro_hasattr.py  macro_is.py  macro_isinstance.py  macro_make_list.py  macro_resolve.py  macro_to_scalar_type.py  macro_tuple_len.py  macro_typeof.py  (+134 more)
myia_backend_python/: environment.yml  pyproject.toml
myia_backend_python/myia_backend_python/: implementations.py  python.py
myia_backend_python/myia_tests_backend_python/: __init__.py
myia_backend_python/scripts/: gen_conda_env_file.sh
myia_backend_python/tests/: .pdbrc  test_python_pdb.py  test_python_rng.py
myia_backend_pytorch/: cpu-extras.conda  environment-cpu.yml  environment-gpu.yml  pyproject.toml
myia_backend_pytorch/myia_backend_pytorch/: __init__.py  pytorch.py
myia_backend_pytorch/myia_tests_backend_pytorch/: __init__.py
myia_backend_pytorch/scripts/: gen_conda_env_file.sh  update_env.py
myia_backend_pytorch/tests/: test_myia_backend_pytorch.py  test_rng.py
myia_backend_pytorch/tests/compile/: test_pytorch_backend.py
myia_backend_relay/: environment.yml  pyproject.toml  relay-extras.conda
myia_backend_relay/myia_backend_relay/: __init__.py  relay.py  relay_helpers.py
myia_backend_relay/myia_tests_backend_relay/: __init__.py
myia_backend_relay/scripts/: gen_conda_env_file.sh
myia_backend_relay/tests/: test_compile.py  test_myia_backend_relay.py  test_relay_rng.py  test_rng.py  test_universal.py
myia_backend_relay/tests/compile/: test_backend.py  test_relay.py
myia_frontend_pytorch/: gpu-extras.conda  pyproject.toml
myia_frontend_pytorch/myia_frontend_pytorch/: __init__.py  pytorch.py  pytorch_abstract_types.py
myia_frontend_pytorch/tests/: test_validate.py
myia_utils/: pyproject.toml
myia_utils/myia_utils/: __init__.py  update_env.py
scripts/: build-doc.sh  check.sh  ci-install.sh  composite.py.template  gen_conda_env_file.sh  infprim.py.template  install-deps-cpu.sh  install-deps-gpu.sh  macro.py.template  make-reqs.py  new_operation.py  op.py.template  prim.py.template  regen.py  test_op.py.template
tests/: README.md  common.py  functions.py  multitest.py  test_abs.py  test_abstract.py  test_agrad.py  test_ainfer.py  test_algos.py  test_anf_ir.py  test_anf_ir_utils.py  test_annotations.py  test_api.py  test_aspecialize.py  test_basics.py  test_cconv.py  test_clone.py  test_compile.py  test_dshape.py  test_dtype.py  test_edge_cases.py  test_front.py  test_grad.py  test_grad_with_rng.py  test_gradient.py  test_graph_utils.py  test_hypermap.py  test_infer.py  test_info.py  test_ir.py  test_ir_utils.py  test_jax.py  test_lang.py  test_macros.py  test_manager.py  test_model.py  test_monomorphize.py  test_opt.py  test_opt2.py  test_parser.py  (+11 more)
tmp/: conv2d_transpose.py  shape_conv.py
viz/: graph-channel.js  package-lock.json  package.json
(+192 files in other folders)
