[tool.poetry]
name = "myia"
version = "0.1.0"
description = "A linear algebra compiler for a subset of Python"
authors = ["Mila development team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mila-iqia/myia"

[tool.poetry.dependencies]
python = "^3.8"
ovld = "^0.2.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
