[tool.poetry]
name = "myia"
version = "0.1.0"
description = "A linear algebra compiler for a subset of Python"
authors = ["Mila development team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mila-iqia/myia"

[tool.poetry.dependencies]
python = "^3.8"
ovld = "^0.3.2"
hrepr = "^0.4.0"
colorama = "^0.4.4"
numpy = "1.21.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pydocstyle = "^6.0.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.plugins."myia.plugins"]
standard_inferrers = "myia.infer.inferrers:add_standard_inferrers"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
known_first_party = "myia"
known_third_party = "ovld"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.coverage.report]
exclude_lines = [
    "AssertionError",
    "NotImplementedError",
    "untested",
    "pragma: no cover",
]
