[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "myia_backend_python"
version = "0.1.0"
description = "Python backend for myia"
authors = ["Mila development team"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
isort = "~4.3.21"

[tool.poetry2conda]
name = "myia_backend_python"

[tool.isort]
known_first_party = "myia_backend_python"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."myia.backend"]
"python" = "myia_backend_python"

[tool.poetry.plugins."myia.tests.backend"]
"python" = "myia_tests_backend_python"
