[tool.poetry]
name = "myia_backend_pytorch"
version = "0.1.0"
description = "Pytorch backend for myia"
authors = ["Mila development team"]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
known_first_party = "myia_backend_pytorch"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."myia.backend"]
"pytorch" = "myia_backend_pytorch"
