[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "myia_backend_relay"
version = "0.1.0"
description = "Relay backend for myia"
authors = ["Mila development team"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
scipy = "^1.5"
antlr4-python3-runtime = "4.7.2"
decorator = "^4"
attrs = "^19"

[tool.poetry.dev-dependencies]
isort = "~4.3.21"

[tool.poetry2conda]
name = "myia_backend_relay"

[tool.poetry2conda.dependencies]
antlr4-python3-runtime = { channel = "pip" }

[tool.isort]
known_first_party = "myia_backend_relay"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."myia.backend"]
"relay" = "myia_backend_relay"
