[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "myia_frontend_pytorch"
version = "0.1.0"
description = "Pytorch frontend for myia"
authors = ["Mila development team"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
torch = "1.5.0"
torchvision = "0.6.0"

[tool.poetry.dev-dependencies]
isort = "~4.3.21"

[tool.poetry2conda]
name = "myia_frontend_pytorch"

[tool.poetry2conda.dependencies]
torch = { channel = "pytorch", name = "pytorch" }
torchvision = { channel = "pytorch" }

[tool.isort]
known_first_party = "myia_backend_pytorch"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."myia.frontend"]
"pytorch" = "myia_frontend_pytorch"
